overflow fix

--- a/src/components/projecteditor/style.less
+++ b/src/components/projecteditor/style.less
@@ -381,36 +381,42 @@
     color: #ffffff;
     margin-left: 15px;
     display: inline-block;
-    height: 30px;
+    height: 40px;
+    line-height: 3;
 
 }
 .testColorChange:hover {
-    //background-color: rgba(255, 69, 92, 0.4);
+    background-color: rgba(255, 69, 92, 0.4);
     //justify-content: center;
-    //cursor: pointer;
+    cursor: pointer;
+    border-left: solid #d0021b;;
+    //width:max-content;
     //z-index: 100;
     //display: inline-flex;
 }
 .testColorChange {
     display: inline-flex;
     vertical-align: sub;
-    width: 90%;
-    justify-content: space-between;
+    width: 100%;
+    padding-left: 35px;
 }
 span ul, menu, dir {
     width: 100%;
     padding-inline-start: 0;
-    padding-left: 40px;
+    padding-left: 35px;
     z-index: 10;
 }
 .colorChange:hover {
     background-color: rgba(255, 69, 92, 0.4);
-
-
 }
 .testTime {
-    right: 0;
+    right: 25px;
     position: absolute;
     float: right;
     color: #fff;
+    line-height: 2.7;
+
+}
+ul, menu, dir{
+    padding-inline-start: 30px;
 }
